--- a/protocol/develop/C2 - Contract Formation.yaml
+++ b/protocol/develop/C2 - Contract Formation.yaml
@@ -46,6 +46,12 @@ fields:
     type: STRING
     size: 5
 
+- name: Timestamp
+    label: "Timestamp"
+    description: "The timestamp to indicate when the Smart Contract created the Contract Formation action."
+    type: TIME
+    size: 8
+
   - name: ContractExpiration
     label: "Contract Expiration"
     description: "All actions related to the contract will cease to work after this timestamp. The smart contract will stop running.  This will allow many token use cases to be able to calculate smart contract running costs. Eg. an issuer is creating tickets for an event on the 5th of June 2018.  The smart contract will facilitate exchange and issue transactions up until the 6th of June.  Wallets can use this to forget tokens that are no longer valid - or at least store them in an 'Expired' folder."
@@ -56,7 +62,7 @@ fields:
     label: "URI"
     description: "Points to an information page that also has a copy of the Contract.  Anyone can go to the website to have a look at the price/token, information about the Issuer (company), information about the Asset, legal information, etc.  There will also be a way for Token Owners to vote on this page and contact details with the Issuer/tokenized companies. Could be a IPv6/IPv4, an IPFS address (hash) or txn-id for on chain information or even a public address (DNS)."
     type: STRING
-    size: 78
+    size: 70
 
   - name: ContractRevision
     label: "Contract Revision"
