--- a/protocol/develop/A1 - Asset Definition.yaml
+++ b/protocol/develop/A1 - Asset Definition.yaml
@@ -8,6 +8,8 @@ metadata:
   name: AssetDefinition
   label: Asset Definition Action
   description: "This action is used by the issuer to define the properties/characteristics of the Asset (token) that it wants to create."
+  validation: AssetCreation
+  rejection: Rejection
 
 fields:
   - name: ActionPrefix
