--- a/protocol/develop/E1 - Order.yaml
+++ b/protocol/develop/E1 - Order.yaml
@@ -8,6 +8,8 @@ metadata:
   name: Order
   label: Order Action
   description: "Issuer to signal to the smart contract that the tokens that a particular PKH owns are to be confiscated, frozen or thawed."
+  validation: [Freeze, Thaw, Confiscation, Reconciliation]
+  rejection: Rejection
 
 fields:
   - name: ActionPrefix
