--- a/protocol/develop/T1 - Send.yaml
+++ b/protocol/develop/T1 - Send.yaml
@@ -8,6 +8,8 @@ metadata:
   name: Send
   label: Send Action
   description: "A Token Owner Sends a Token to a Receiver. The Send Action requires no sign-off by the Token Receiving Party and does not provide any on-chain consideration to the Token Sending Party. Can be used for User Revocation (remove tokens from wallet by sending back to Issuer). Can be used for redeeming a ticket, however, it is probably better for most ticket use cases to use the exchange action for ticket redemption."
+  validation: Settlement
+  rejection: Rejection
 
 fields:
   - name: ActionPrefix
