--- a/protocol/develop/T3 - Swap.yaml
+++ b/protocol/develop/T3 - Swap.yaml
@@ -11,6 +11,12 @@ metadata:
   validation: Settlement
   rejection: Rejection
 
+rules:
+  contractFee: 8000
+  inputs: [SENDER, RECEIVER]
+  outputs: [CONTRACT, OTHER_CONTRACT, SENDER, RECEIVER]
+  required: [Party1AssetType, Party1AssetID, Party1TokenQty, Party2AssetType, Party2AssetID, Party2TokenQty]
+
 fields:
   - name: ActionPrefix
     label: "Action Prefix"
