--- a/protocol/develop/E4 - Confiscation.yaml
+++ b/protocol/develop/E4 - Confiscation.yaml
@@ -9,6 +9,11 @@ metadata:
   label: Confiscation Action
   description: "To be used to comply with contractual obligations and/or legal requirements."
 
+rules:
+  contractFee: 546
+  inputs: [CONTRACT]
+  outputs: [USER, CONTRACT]
+
 fields:
   - name: ActionPrefix
     label: "Action Prefix"
