--- a/protocol/develop/E5 - Reconciliation.yaml
+++ b/protocol/develop/E5 - Reconciliation.yaml
@@ -9,6 +9,11 @@ metadata:
   label: Reconciliation Action
   description: "To be used at the direction of the issuer to fix record keeping errors with bitcoin and token balances."
 
+rules:
+  contractFee: 546
+  inputs: [CONTRACT]
+  outputs: [USER, CONTRACT]
+
 fields:
   - name: ActionPrefix
     label: "Action Prefix"
