--- a/protocol/develop/R2 - Addition.yaml
+++ b/protocol/develop/R2 - Addition.yaml
@@ -9,6 +9,11 @@ metadata:
   label: Addition Action
   description: "Adds a User's public address to a global distributed whitelist. Entities (eg. Issuer) can filter by the public address of known and trusted entities (eg. KYC Databases such as coinbase) and therefore are able to create sublists - or subsets - of the main global whitelist."
 
+rules:
+  contractFee: 546
+  inputs: [CONTRACT]
+  outputs: [USER, CONTRACT]
+
 fields:
   - name: ActionPrefix
     label: "Action Prefix"
