--- a/protocol/develop/R3 - Alteration.yaml
+++ b/protocol/develop/R3 - Alteration.yaml
@@ -9,6 +9,11 @@ metadata:
   label: Alteration Action
   description: "A registry entry can be altered."
 
+rules:
+  contractFee: 546
+  inputs: [CONTRACT]
+  outputs: [USER, CONTRACT]
+
 fields:
   - name: ActionPrefix
     label: "Action Prefix"
