--- a/protocol/develop/C1 - Contract Offer.yaml
+++ b/protocol/develop/C1 - Contract Offer.yaml
@@ -12,10 +12,23 @@ metadata:
   rejection: Rejection
 
 rules:
-  contractFee: 4000
-  inputs: [ISSUER]
-  outputs: [CONTRACT, ISSUER]
-  required: [ContractName]
+  fee: 4000
+  inputs:
+    - name: Issuer
+      label: "Issuer's Public Address"
+      description: "The smart contract sets the issuer PKH with whatever PKH is in Index 0 of the first valid Contract Offer.  From then on, the SC will only respond to 'commands' (request actions) from this address with respect to actions that are issuer controlled according to the protocol."
+
+    - name: Operator
+      label: "Contract Operator's Public Address (Optional)"
+      description: "The one exception to the rule above. The Contract Operator can nominate a secondary controlling PKH that can act on behalf of the issuer for issuer related requests. Typically this will be the Smart Contract Operator. (Optional)"
+      optional: true
+
+  outputs:
+    - name: Contract
+      label: "Contract Public Address"
+
+    - name: Issuer
+      label: "Issuer's Public Address"
 
 fields:
   - name: ActionPrefix
@@ -35,6 +48,7 @@ fields:
     description: "Can be any unique identifying string, including human readable names for branding/vanity purposes.   [Contract identifier (instance) is the bitcoin public key hash address. If the Public Address is lost, then the issuer will have to reissue the entire contract, Asset definition and tokens with the new public address.]. Smart contracts can be branded and specialized to suit any terms and conditions."
     type: STRING
     size: 32
+    required: true
 
   - name: ContractFileHash
     label: "Contract File Hash"
